chore: use text block for json
Signed-off-by: Zhanhui Li <lizhanhui@gmail.com>